# Smart_Translater

./: .env.example  .gitignore.example  README.md  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 2025_07_02_1654-7a05b2b1ffa0_.py
app/: main.py
app/backend/: __init__.py  routs.py  schemas.py
app/core/: __init__.py  lifespan.py  models.py
app/utils/: __init__.py  logger.py
