[project]
name = "smart-translater2"
version = "0.1.0"
description = ""
authors = [
    {name = "Макс",email = "rumyantsev1m0s1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "redis[async] (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
